--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
+    "greenlock-express": "^4.0.3",
     "redis": "^4.6.14",
     "reflect-metadata": "^0.2.2",
     "sqlite": "^5.1.1",
@@ -14,6 +16,7 @@
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.9",
     "ts-node": "^10.9.2",
