--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "greenlock-express": "^4.0.3",
+    "multer": "^1.4.5-lts.1",
     "node-telegram-bot-api": "^0.66.0",
     "redis": "^4.6.14",
     "reflect-metadata": "^0.2.2",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.14.9",
     "@types/node-telegram-bot-api": "^0.64.7",
     "ts-node": "^10.9.2",
