--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "express": "^4.19.2",
     "greenlock-express": "^4.0.3",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.10.3",
+    "mysql2": "^3.11.0",
     "node-telegram-bot-api": "^0.66.0",
     "redis": "^4.6.14",
     "reflect-metadata": "^0.2.2",
+    "sequelize": "^6.37.3",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "typeorm": "^0.3.20"
