--- a/param.env
+++ b/param.env
@@ -1,1 +1,4 @@
-MY_SECRET_TOKEN=7248210755:AAFy2vW3Lc1JVq2bskctvuHoqPyhTkFDfgg
+MY_SECRET_TOKEN=6769650957:AAFycFIyHn60g-Ulek--8HJVClzbCNorT2g
+user=root
+password=Eh@Kx$4bmdVT
+database=mainVersionStenBit
