--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "sequelize": "^6.37.3",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "ton-core": "^0.53.0",
+    "ton-crypto": "^3.2.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
